# bakeronomicon

./: .gitignore  Procfile  README.md  localhost-environment-variables.json  manage.py  pyproject.toml  requirements.txt
bakeronomicon/: asgi.py  settings.py  settings_railway.py  urls.py  wsgi.py
batches/: admin.py  models.py
batches/migrations/: 0001_initial.py  0002_alter_batch_options.py
core/: models.py
ingredients/: admin.py  models.py
ingredients/migrations/: 0001_initial.py  0002_auto_20210827_1629.py
measurements/: models.py
measurements/migrations/: 0001_initial.py  0002_auto_20210827_1629.py
photos/: admin.py  models.py
photos/migrations/: 0001_initial.py  0002_alter_photo_options.py
recipes/: admin.py  models.py
recipes/migrations/: 0001_initial.py  0002_auto_20210827_1629.py
