[tool.poetry]
name = "bakeronomicon"
version = "0.1.0"
description = ""
authors = ["Adam Yala <adamkyala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
django-extensions = "^3.1.3"
sentry-sdk = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
djhtml = "^1.4.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
